--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,15 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: "https://chxtio.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/ocr_jekyll" # the subpath of your site, e.g. /blog
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  chxtio
+repository: jekyll_ocr
+github:
+  is_project_page: true # set to true if this is a project page, false if it's a user page
+
+author:
+  name: Your Name
+  email: your-email@example.com
+  twitter: jekyllrb   # or your actual Twitter handle
 
 # Build settings
 markdown: kramdown
