--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: OC Robotics
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Temporary Jekyll site for OCR documentation
 url: "https://chxtio.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/ocr_jekyll" # the subpath of your site, e.g. /blog
 twitter_username: jekyllrb
@@ -28,9 +26,10 @@ github:
   is_project_page: true # set to true if this is a project page, false if it's a user page
 
 author:
-  name: Your Name
-  email: your-email@example.com
-  twitter: jekyllrb   # or your actual Twitter handle
+  name: Chris Tio
+  # email: your-email@example.com
+  # twitter: jekyllrb   # or your actual Twitter handle
+  discord: test
 
 # Build settings
 markdown: kramdown
